--- a/control/control
+++ b/control/control
@@ -1,8 +1,8 @@
 Package: luci-app-rtorrent
-Version: 0.1.6
-Depends: libc, rtorrent-rpc, luaexpat, luasocket, luasec, screen
+Version: 0.2.0
+Depends: libc, rtorrent-rpc, luaexpat, luasocket, luasec, luci-lib-httpprotoutils
 Source: https://github.com/wolandmaster/luci-app-rtorrent
 Section: luci
 Maintainer: Sandor Balazsi <sandor.balazsi@gmail.com>
 Architecture: all
-Description: rTorrent client for LuCI
+Description: rTorrent frontend for LuCI
