--- a/control/control
+++ b/control/control
@@ -1,6 +1,6 @@
 Package: luci-app-rtorrent
 Version: 0.2.0
-Depends: libc, rtorrent-rpc, luaexpat, luasocket, luasec, luci-lib-httpprotoutils
+Depends: libc, rtorrent-rpc, luaexpat, luasocket, luasec, luci-compat, luci-lib-httpprotoutils
 Source: https://github.com/wolandmaster/luci-app-rtorrent
 Section: luci
 Maintainer: Sandor Balazsi <sandor.balazsi@gmail.com>
